# sys-3060-final-project

./: .gitignore  Project_Specifications.md  pyproject.toml
notebooks/: 01_NOTES.md  01_exploration_and_base_model.ipynb  02_NOTES.md  02_rebalancing_optimization.ipynb  _build_notebook.py  _build_notebook_02.py
report/: course_requirements.md  report.tex
report/deliverable/: README.md
report/deliverable/code/notebooks/: 01_exploration_and_base_model.ipynb  02_rebalancing_optimization.ipynb
report/deliverable/code/src/: ctmc.py  data.py  geo.py  optimization.py
report/deliverable/code/tests/: test_ctmc.py  test_optimization.py
src/: __init__.py  ctmc.py  data.py  geo.py  optimization.py
tests/: test_ctmc.py  test_optimization.py
