[project]
name = "sys3060-citibike"
version = "0.1.0"
description = "SYS 3060 final project: Citi Bike station capacity reallocation via closed-form CTMC analysis."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "folium>=0.17",
    "requests>=2.32",
    "pyarrow>=15.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
